# p2CC

./: CMakeLists.txt  README.md  compile.bat  compile.sh
data/InvalidMTproposed/: 1.txt
data/MTproposed/: mt_abcontador.txt  mt_an_bm.txt
data/invalid/: Test_BlankInSigma.txt  Test_Invalid.txt  Test_InvalidAcceptState.txt  Test_InvalidSymbol.txt
data/multitape/: mt_copiar.txt
include/: Alphabet.h  MTException.h  MTParser.h  MTSimulator.h  State.h  Tape.h  Transition.h  TuringMachine.h
src/: Alphabet.cpp  MTParser.cpp  MTSimulator.cpp  State.cpp  Tape.cpp  Transition.cpp  TuringMachine.cpp  main.cpp
